Limit cookie access to HTTP requests
Security fix.

--- a/htdocs/php.ini
+++ b/htdocs/php.ini
@@ -17,3 +17,4 @@ session.cookie_lifetime = 7776000
 session.cache_expire = 7776000
 session.cookie_secure = On
 session.cache_limiter = private
+session.cookie_httponly = true
